=== 2009-05-25

* creata gem 0.0.5
* scritto un briciolo di documentazione

=== 2009-05-23

* spostati i dati dei test in una directory indipendente
* creata gem 0.0.4
* passa i test con gem install -t

===  2009-05-22

* fissati i test
* creata gem 0.0.3

===  2009-05-18

* convertito repository da subersion a git

=== 2007 08 18

* create le directory lib/dircat, test/dircat