@@ -1,0 +1,6 @@
+--colour
+--format
+progress
+--loadby
+mtime
+--reverse
